Fix waste of space of collapsed left panel

--- a/res/css/views/rooms/_RoomTile.scss
+++ b/res/css/views/rooms/_RoomTile.scss
@@ -117,7 +117,7 @@ limitations under the License.
 
 .collapsed {
     .mx_RoomTile {
-        margin: 0 2px;
+        margin: 0 6px;
         padding: 0 2px;
         position: relative;
         justify-content: center;
